// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-HomeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.6 8c.22 0 .273-.127.117-.282L8.283 1.28c-.156-.154-.41-.152-.564.004-2.57 2.573-3.855 3.86-6.422 6.433-.155.156-.1.283.12.283H3v5.6c0 .22.18.4.4.4h3.2c.22 0 .4-.18.4-.4V11h2v2.6c0 .22.182.4.402.4H12.6c.22 0 .4-.18.4-.4V8h1.6z"
  />
</Icon>
`;

exports[`HomeIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-HomeIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.6 8c.22 0 .273-.127.117-.282L8.283 1.28c-.156-.154-.41-.152-.564.004-2.57 2.573-3.855 3.86-6.422 6.433-.155.156-.1.283.12.283H3v5.6c0 .22.18.4.4.4h3.2c.22 0 .4-.18.4-.4V11h2v2.6c0 .22.182.4.402.4H12.6c.22 0 .4-.18.4-.4V8h1.6z"
  />
</Icon>
`;

exports[`HomeIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-HomeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.6 8c.22 0 .273-.127.117-.282L8.283 1.28c-.156-.154-.41-.152-.564.004-2.57 2.573-3.855 3.86-6.422 6.433-.155.156-.1.283.12.283H3v5.6c0 .22.18.4.4.4h3.2c.22 0 .4-.18.4-.4V11h2v2.6c0 .22.182.4.402.4H12.6c.22 0 .4-.18.4-.4V8h1.6z"
  />
</Icon>
`;
